7092238: G1: Uninitialized field gc_efficiency in G1PrintRegionLivenessInfo output

Reviewed-by: jcoomes, johnc